--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,420 @@ body, html{
     padding:0;
 }
 #header {
-    width: 100%;
-    padding:0 15px;
+    width: 90%;
+    height: 80px;
     display: flex;
     justify-content: space-between;
-    align-items:center;
+    align-items:end;
+    margin: auto;
+}
+
+/* Menu */
+
+#logo_menu{
+    width:5%;
+}
+
+#menu_navigation{
+    width: 33%;
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+}
+
+#menu_navigation a {
+    width:33%;
+    padding: 10px;
+    padding-bottom: 20px;
+    padding-top: 30px;
+    text-decoration: none;
+    text-align:center;
+ }
+
+#menu_navigation a:hover {
+    border-top: 2px blue solid;
+ }
+
+/* Liens */
+
+.lien_sans_decoration{
+    text-decoration: none;
+}
+
+.lien_sans_decoration_noir{
+    text-decoration: none;
+    color: black;
+}
+
+.lien_sans_decoration_gras{
+    text-decoration: none;
+    font-weight: bold;
+}
+
+/* Section */
+
+#recherche_hebergement{
+    width: 90%;
+    margin: auto;
+}
+
+#recherche_hebergement h1{
+    font-weight: bold;
+    font-size: 26px;
+    margin: 0;
+    margin-top: 20px;
+}
+#recherche_hebergement h2{
+    margin: 0;
+    font-size: x-medium;
+    font-size: 19px;
+}
+
+#barre_recherche{
+    height: 40px;
+    width:33%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+#barre_recherche input{
+    height: 100%;
+    width: 30%;
+    font-weight: bold;
+    border: 1px lightgrey solid;
+}
+
+#barre_recherche button{
+    height: 100%;
+    width: 15%;
+    background-color: blue;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    border: none;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+#barre_recherche i{
+    display: flex;
+    justify-content: center;
+    width: 5%;
+    height: 100%;
+    align-items: center;
+    background-color: lightgrey;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+
+#filtres{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;;
+}
+
+#filtres span{
+    width: 50px;
+    font-weight: bold;
+}
+
+#filtres ul{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    list-style-type: none;
+    padding-left: 0px;
+
+}
+
+#filtres li{
+    display: flex;
+    align-items: center;
+    border: 1px lightgrey solid;
+    border-radius: 20px;
+    margin-left: 20px;
+ 
+}
+
+#filtres i{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    background-color: rgb(176, 217, 243);
+    color: blue;
+ 
+}
+
+#filtres a{
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+
+/* hebergement */
+
+.blue_star{
+    color: blue;
+}
+
+.grey_star{
+    color: lightgrey;
+}
+
+#div_hebergement{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 90%;
+    margin: auto;
+}
+
+#liste_hebergement{
+    width: 65%;
+    border-radius: 30px;
+    background-color: lightgray;
+    margin-bottom: 20px;
+    padding: 50px;
+}
+
+#liste_hebergement h3{
+    margin: 0;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+
+#liste_hebergement a{
+    display: block;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
+
+#groupe_hebergement{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.hebergement{
+    width: 30%;
+    background-color: white;
+    border-radius: 30px;
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-top: 5px;
+    margin-bottom: 40px;
+}
+
+.image_hebergement{
+    width: 100%;
+    height:165px;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    object-fit: cover;
+}
+
+.texte_hebergement{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding-left: 15px;
+}
+
+.texte_hebergement h4, .texte_hebergement p{
+    margin: 0;
+}
+
+.texte_hebergement h4, .texte_hebergement p, .texte_hebergement div{
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+
+#groupe_populaire{
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    align-items: center;
+    border-radius: 30px;
+    background-color: lightgray;
+    padding: 50px;
+}
+
+#titre_populaire{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+#titre_populaire h3{
+    margin: 0;
+    font-weight: bold;
+    align-items: center;
+}
+
+.hebergement_populaire{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+    border-radius: 20px;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.image_hebergement_populaire{
+    width: 40%;
+    height: 200px;
+    background-color: white;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    padding: 5px;
+    object-fit: cover;
+}
+
+.description_hebergement_populaire{
+    padding-left: 20px;
+    align-items: center;
+}
+
+.description_hebergement_populaire h4{
+   margin: 0;
+}
+
+.description_hebergement_populaire i{
+    margin: 0;
+ }
+
+ .description_hebergement_populaire p{
+    margin: 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
+ }
+
+ /* Activités */
+
+ #section_activite{
+    width: 90%;
+    margin: auto;
+    margin-top: 50px;
+ }
+
+ #section_activite h3{
+    display: block;
+    font-weight: bold;
+    
+    margin-bottom: 20px;
+ }
+
+ #groupe_activite{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 40px;
+ }
+
+ .activite{
+    width: 20%;
+    border-radius: 20px;
+    border: 1px lightgrey solid;
+    margin: 0;
+ }
+
+ .activite_double{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 20%;
+    align-items: center;
+    margin: 0;
+ }
+
+ .activite_double_sup{
+    width: 100%;
+    border-radius: 20px;
+    border: 1px lightgrey solid;
+ }
+
+ .activite_double_inf{
+    width: 100%;
+    border-radius: 20px;
+    border: 1px lightgrey solid;
+ }
+
+ .image_activite_100{
+    width: 100%;
+    height: 700px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    object-fit: cover;
+ }
+
+ .image_activite_50{
+    width:100%;
+    height: 300px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    object-fit: cover;
+ }
+
+ .image_activite_30{
+    width:100%;
+    height: 200px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    object-fit: cover;
+ }
+
+ .activite figcaption{
+    padding: 20px;
+    font-weight: bold;
+ }
+
+ .activite_double figcaption{
+    padding: 20px;
+    font-weight: bold;
+ }
+
+
+/* Footer */
+
+#footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    background-color: lightgrey;
+    padding: 20px;
+}
+
+#footer h3{
+    font-weight: bold;
+}
+
+.div_footer{
+    display: flex;
+    flex-direction: column;
+    margin-right: 600px;
+}
+
+.div_footer a{
+    text-decoration: none;
+    color: black;
+    margin-bottom: 10px;
 }
