--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body, html{
 /* Menu */
 
 #logo_menu{
-    width:5%;
+    width:8%;
 }
 
 #menu_navigation{
@@ -70,7 +70,8 @@ body, html{
     font-weight: bold;
     font-size: 26px;
     margin: 0;
-    margin-top: 20px;
+    margin-top: 40px;
+    margin-bottom: 10px;
 }
 #recherche_hebergement h2{
     margin: 0;
@@ -89,33 +90,35 @@ body, html{
 }
 
 #barre_recherche input{
-    height: 100%;
-    width: 30%;
+    width: 180px;
+    height: 40px;
     font-weight: bold;
-    border: 1px lightgrey solid;
+    border: 1px rgb(240, 240, 240) solid;
+    padding:0;
+    padding-left:10px;
 }
 
 #barre_recherche button{
-    height: 100%;
-    width: 15%;
-    background-color: blue;
+    width: 100px;
+    height: 40px;
+    background-color: rgb(0, 100, 250);
     text-decoration: none;
     color: white;
     font-weight: bold;
     border: none;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
 #barre_recherche i{
     display: flex;
     justify-content: center;
-    width: 5%;
-    height: 100%;
+    width: 40px;
+    height: 40px;
     align-items: center;
-    background-color: lightgrey;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
+    background-color: rgb(240, 240, 240);
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
 }
 
 #filtres{
@@ -142,7 +145,7 @@ body, html{
 #filtres li{
     display: flex;
     align-items: center;
-    border: 1px lightgrey solid;
+    border: 1px rgb(240, 240, 240) solid;
     border-radius: 20px;
     margin-left: 20px;
  
@@ -155,8 +158,8 @@ body, html{
     width: 40px;
     height: 40px;
     border-radius: 20px;
-    background-color: rgb(176, 217, 243);
-    color: blue;
+    background-color: rgb(220, 235, 255);
+    color: rgb(0, 100, 250);
  
 }
 
@@ -168,15 +171,38 @@ body, html{
     padding-right: 10px;
 }
 
+#information{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin:0;
+    margin-top:15px;
+    margin-bottom:30px;
+}
+
+#information i{
+    display: flex;
+    justify-content: center;
+    width: 26px;
+    height: 26px;
+    align-items: center;
+    color: rgb(0, 100, 250);
+    font-size: 12px;
+    border: 1px rgb(240, 240, 240) solid;
+    border-radius: 13px;
+    margin-right: 10px;
+}
 
 /* hebergement */
 
 .blue_star{
-    color: blue;
+    font-size: 12px;
+    color: rgb(0, 100, 250);
 }
 
 .grey_star{
-    color: lightgrey;
+    font-size: 12px;
+    color: rgb(240, 240, 240);
 }
 
 #div_hebergement{
@@ -190,9 +216,9 @@ body, html{
 #liste_hebergement{
     width: 65%;
     border-radius: 30px;
-    background-color: lightgray;
-    margin-bottom: 20px;
+    background-color: rgb(240, 240, 240);
     padding: 50px;
+    padding-bottom: 30px;
 }
 
 #liste_hebergement h3{
@@ -216,7 +242,7 @@ body, html{
 }
 
 .hebergement{
-    width: 30%;
+    width: 31%;
     background-color: white;
     border-radius: 30px;
     padding-right: 5px;
@@ -227,7 +253,7 @@ body, html{
 
 .image_hebergement{
     width: 100%;
-    height:165px;
+    height:110px;
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
     object-fit: cover;
@@ -239,6 +265,7 @@ body, html{
     justify-content: space-between;
     align-items: flex-start;
     padding-left: 15px;
+    margin-bottom: 10px;
 }
 
 .texte_hebergement h4, .texte_hebergement p{
@@ -254,11 +281,12 @@ body, html{
 #groupe_populaire{
     display: flex;
     flex-direction: column;
-    width: 30%;
+    width: 32%;
     align-items: center;
     border-radius: 30px;
-    background-color: lightgray;
+    background-color: rgb(240, 240, 240);
     padding: 50px;
+    padding-bottom: 30px;
 }
 
 #titre_populaire{
@@ -287,8 +315,8 @@ body, html{
 }
 
 .image_hebergement_populaire{
-    width: 40%;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     background-color: white;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
@@ -297,8 +325,9 @@ body, html{
 }
 
 .description_hebergement_populaire{
+    width: 165px;
     padding-left: 20px;
-    align-items: center;
+    padding-right:5px;
 }
 
 .description_hebergement_populaire h4{
@@ -313,6 +342,10 @@ body, html{
     margin: 0;
     margin-top: 10px;
     margin-bottom: 10px;
+ }
+
+ .prix{
+     font-size: 13px;
  }
 
  /* Activités */
@@ -338,9 +371,9 @@ body, html{
  }
 
  .activite{
-    width: 20%;
+    width: 23%;
     border-radius: 20px;
-    border: 1px lightgrey solid;
+    border: 1px rgb(240, 240, 240) solid;
     margin: 0;
  }
 
@@ -348,7 +381,7 @@ body, html{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 20%;
+    width: 23%;
     align-items: center;
     margin: 0;
  }
@@ -356,18 +389,20 @@ body, html{
  .activite_double_sup{
     width: 100%;
     border-radius: 20px;
-    border: 1px lightgrey solid;
+    border: 1px rgb(240, 240, 240) solid;
+    margin: 0;
  }
 
  .activite_double_inf{
     width: 100%;
     border-radius: 20px;
-    border: 1px lightgrey solid;
+    border: 1px rgb(240, 240, 240) solid;
+    margin: 0;
  }
 
  .image_activite_100{
     width: 100%;
-    height: 700px;
+    height: 400px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     object-fit: cover;
@@ -375,7 +410,7 @@ body, html{
 
  .image_activite_50{
     width:100%;
-    height: 300px;
+    height: 180px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     object-fit: cover;
@@ -383,7 +418,7 @@ body, html{
 
  .image_activite_30{
     width:100%;
-    height: 200px;
+    height: 120px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     object-fit: cover;
@@ -406,8 +441,14 @@ body, html{
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    background-color: lightgrey;
+    background-color: rgb(240, 240, 240);
     padding: 20px;
+}
+
+#footer_70{
+    display: flex;
+    justify-content: space-between;
+    width: 70%;
 }
 
 #footer h3{
@@ -417,7 +458,6 @@ body, html{
 .div_footer{
     display: flex;
     flex-direction: column;
-    margin-right: 600px;
 }
 
 .div_footer a{
