--- a/styles.css
+++ b/styles.css
@@ -24,20 +24,16 @@ body, html{
 }
 
 #menu_navigation{
-    height: 80px;
     display: flex;
     justify-content: space-between;
-    align-items: end;
+    width: 15%;
+    align-items: center;
 }
 
 #menu_navigation a {
-    width:33%;
-    height: 80px;
-    padding: 10px;
-    padding-bottom: 20px;
-    padding-top: 30px;
     text-decoration: none;
-    text-align:center;
+    padding-top: 15px;
+    padding-bottom: 15px;
  }
 
 #menu_navigation a:hover {
@@ -513,7 +509,8 @@ body, html{
     }
 
     #menu_navigation{
-        width: 50%;
+        width: 30%;
+        margin-left: 200px;
     }
 
     #footer_70{
@@ -542,6 +539,8 @@ body, html{
         flex-direction: row;
         flex-wrap: wrap;
         order: 3;
+        margin:0;
+        text-align:center;
     }
 
     #menu_navigation a{
