--- a/styles.css
+++ b/styles.css
@@ -680,6 +680,8 @@ body, html{
 
 
     #liste_hebergement h3 {
+        margin-top: 20px;
+        margin-bottom: 10px;
         margin-left: 20px;
     }
 
@@ -782,7 +784,7 @@ body, html{
 
     #section_activite{
         padding:0;
-        margin-top:0;
+        margin-top:40px;
     }
 
     #groupe_activite {
